2006-04-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Fix bug introduced when adding
	newpath/closepath around the border of 3D plots with 'set view map'.
	The top border was not getting drawn, and the individual border
	components were not being considered separately.

	* src/graphics.c (plot_border) src/gadgets.h:  Similar bugfix in 2D.

2006-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/standard.c (f_tanh): Fix a two-fold error in bounds checking for
	tanh().  Bug #1452627

2006-04-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/pgnuplot.c: Patch for SF bug [1232950] "-persist option does
	not work in Version 4.0.0 (Windows)".  Omit sending `exit` from pgnuplot
	to wgnuplot when `-persist` is given on command line.

2006-04-08  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/set.c (set_palette_file) docs/gnuplot.doc: Binary palette files
	are supported as well. Example:
	    set palette file "palette.bin" binary record=64 using 1:2:3

2006-04-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.os2: Define more features.

	* config/makefile.os2:
	  - add a list of required/recommended tools and libraries,
	  - make use of pre-built version of libgd from hobbes.nmsu.edu,
	  - change requirements for newer versions of PDFlib,
	  - replace shell script to create allterm.h by 4allterm.cmd in Rexx.

	* src/os2/4allterm.cmd: New Rexx script to create allterm.h, much faster
	than previous code and does not require the unix tool chain to be
	installed.

2006-04-07  laboratoryman  <laboratoryman@users.sourceforge.net>

	* src/term.c (test_term): No terminal currently implements any head
	fill style (curr_arrow_headfilled) other than 0/1/2.  So don't use 3 as
	a test case.

2006-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: New line-join terminal option {rounded|butt},
	with support for smooth joining of closed polygons via the recently
	added newpath()/closepath() mechanism.
